@@ -1,1 +1,3 @@
 One dimensional array creation and assignment: 1 2 3 4 5 6 7 8 9 10 11
+String array creation and assignment: 1 2 3 4 5 6 7 8 9 10 11
+Object array creation and assignment: 1 2 3 4 5 6 7 8 9 10 11 c b a b a c a b c
